--- a/app/src/main/res/layout/activity_city_list.xml
+++ b/app/src/main/res/layout/activity_city_list.xml
@@ -39,8 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@android:color/holo_blue_dark"
-        android:src="@drawable/ic_add" />
+        android:src="@drawable/ic_add_white_24dp" />
 
 
 </android.support.design.widget.CoordinatorLayout>
