--- a/app/src/main/res/layout/city_list_content.xml
+++ b/app/src/main/res/layout/city_list_content.xml
@@ -13,10 +13,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="16dp"
-        android:paddingRight="16dp"
-        android:paddingLeft="16dp"
-        android:paddingBottom="4dp"
+        android:paddingTop="8dp"
+        android:paddingRight="8dp"
+        android:paddingLeft="8dp"
+        android:paddingBottom="8dp"
         >
 
 
@@ -29,16 +29,15 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="40sp"
             android:text="Icon"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="16dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/city_title"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="100dp"
-            android:layout_alignParentTop="true"
             android:text="title"
             android:textSize="30sp"
+            android:layout_alignTop="@+id/handle"
+            android:layout_centerHorizontal="true"
             />
 
         <TextView
@@ -46,21 +45,16 @@
             android:layout_height="wrap_content"
             android:id="@+id/city_desc"
 
-            android:layout_below="@+id/city_title"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="100dp"
             android:text="desc"
-            />
+            android:layout_below="@+id/city_title"
+            android:layout_centerHorizontal="true"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/upd_time"
-            android:layout_below="@+id/city_desc"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="100dp"
-            android:layout_marginTop="4dp"
             android:text="обновлялось: 21 мая 2016г. 11:35:00"
-            />
+            android:layout_below="@+id/city_desc"
+            android:layout_centerHorizontal="true"/>
         <ImageView
             android:id="@+id/handle"
             android:layout_width="wrap_content"
@@ -68,7 +62,8 @@
             android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
             android:scaleType="center"
-            android:src="@drawable/ic_reorder_grey_500_24dp" />
+            android:src="@drawable/ic_open_with_grey_500_24dp"
+            android:layout_marginRight="16px"/>
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
