--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#0099cc</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#0099cc</color>
+    <color name="colorAccent">#cc0066</color>
 </resources>
