--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="app_bar_height">200dp</dimen>
     <dimen name="item_width">200dp</dimen>
     <dimen name="text_margin">16dp</dimen>
-    <dimen name="title_size">5sp</dimen>
+    <dimen name="title_size">30sp</dimen>
+    <dimen name="margin_top_title">25dp</dimen>
 </resources>
